# prep-c-tasks

./: README.md  Runner.cpp
Quick_sort/: CMakeLists.txt  main.cpp
Signal/: CMakeLists.txt  main.cpp
TournamentSort/: CMakeLists.txt  TournamentSort.hpp  main.cpp
dz5/: CMakeLists.txt  Worker.cpp  Worker.h  main.cpp
dz6/: Ball.cpp  Ball.h  CMakeLists.txt  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Enter_Data.cpp  Enter_Data.h  Volume_Figure.cpp  Volume_Figure.h  main.cpp
first/: CMakeLists.txt  dz4  library.cpp  library.h  main.cpp  test1  test2  компиляция
labirint/: CMakeLists.txt  Field.cpp  Field.h  algorithm.cpp  algorithm.h  main.cpp  test_txt.cpp  test_txt.h  utils.h
lec5/: CMakeLists.txt  main.cpp  my.cpp  my.h
test1/: main.cpp
